kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 944684220857.dkr.ecr.eu-north-1.amazonaws.com/mynoderepo:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
