kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
  - host: my-app.simpleapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-app
            port:
              number: 8080
